@@ -1,5 +1,16 @@
 2005-03-12  Mike Kestner  <mkestner@novell.com>
 
+	* glib/Makefile.am : add new file.
+	* glib/Object.cs : add protected PersistentData hash to hold data
+	across GC cycles.
+	* glib/WeakObject.cs : new object to hold managed refs weakly against
+	the native object.
+	* gtk/ListStore.custom : hold refs for DefaultSortFuncs.
+	* gtk/TreeModelSort.custom : hold refs for DefaultSortFuncs.
+	* gtk/TreeStore.custom : hold refs for DefaultSortFuncs.
+
+2005-03-12  Mike Kestner  <mkestner@novell.com>
+
 	* generator/CallbackGen.cs : don't derive Wrappers from DelegateWrapper
 	any more.  It leaks delegates like crazy. We effectively now use call
 	scope as the default for delegate parameters.
